--- a/Code/templates/index.html
+++ b/Code/templates/index.html
@@ -1,9 +1,14 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is the title of the webpage</title>
+    <title>NYC Handball Courts</title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <script>
+        // Load the map from Flask
+        fetch('/map.html').then(response => response.text()).then(html => {
+            document.getElementById('map').innerHTML = html;
+        })
+    </script>
   </body>
 </html>
