Added div tag to html file

--- a/Code/templates/index.html
+++ b/Code/templates/index.html
@@ -4,6 +4,7 @@
     <title>NYC Handball Courts</title>
   </head>
   <body>
+    <div id="map">Loading map...</div>
     <script>
         // Load the map from Flask
         fetch('/map.html').then(response => response.text()).then(html => {
